# bp-bedrock-service-python

./: .gitignore  AWS-Lembda-deploy.md  BPNotes-Kubernetes.md  BPREADME.md  README.md  bootstrap-localstack.sh  delete-unused-files.sh  deployment.yaml  docker-compose-redhat.sh  docker-compose-redhat.yml  docker-compose.yml  dockerScript.sh  dockerScripts.sh  start-backend-mac.sh  start-backend-redhat.sh  start-backend.sh  start-frontend.sh  start-k8s.sh  stop-bedrock-docker.sh
backend_python/: .env  Dockerfile  Dockerfile-redhat  README.md  pyproject.toml  requirements.txt
backend_python/app/: main.py
backend_python/app/api/: SQSController.py
backend_python/app/api/service/: sqsService.py
backend_python/app/aws/: dummy_lambda_function.py.py
backend_python/app/aws/dynmoDB/: awsDBController.py  aws_controller.py
backend_python/app/aws/scripts/: aws.sh
backend_python/app/models/: SQSModel.py  submission.py
backend_python/app/routers/: auth.py  events.py  forms.py  health.py  queue.py  submissions.py
backend_python/app/service/: sqsService.py
backend_python/app/services/: aws_service.py  repository.py  security.py  submission_service.py
backend_python/app/worker/: pdf_to_tiff.py
backend_python/logs/: .gitkeep
backend_python/tests/: test_submission_api.py
documents/: BPNotes-Kubernetes.md  Kubernetes-onMac.md  PROJECT-PLAN.md  Readme-Kubernetes.md  RedHat-Linux-Issue-Resolved.md  Requirements.md
frontend_react/: Dockerfile  Dockerfile-mac  package-lock.json  package.json  vite.config.ts
frontend_react/src/: App.css  (+3 more)
k8s/: localstack-init.yaml
(+35 files in other folders)
